raw-templates/grafana-v2-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs-green
  namespace: observability
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - grafana-green.kasha.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana-v2-service.observability.svc.cluster.local
            port:
              number: 3000
