raw-templates/grafana.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: observability
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - grafana.kasha.io
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.observability.svc.cluster.local
            port:
              number: 80
